2006-06-28  Brian Warner  <warner@lothar.com>

	* buildbot/slave/bot.py (SlaveBuilder.commandComplete): add minor
	log message if the step was shut down

	* buildbot/scripts/runner.py (SlaveOptions.longdesc): remove
	obsolete reference to mktap.

2006-06-20  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_steps.py (BuildStep.testShellCommand1): update
	test to include new 'logfiles' argument sent from master to slave

2006-06-19  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial): track Progress from
	_trial_temp/test.log too

	* buildbot/process/step.py (OutputProgressObserver): generalize
	the earlier StdioProgressObserver into an OutputProgressObserver
	that can track LogFiles other than stdio.
	(LoggingBuildStep.__init__): same

	* buildbot/process/step_twisted.py (Trial): use logfiles= to track
	_trial_temp/test.log, not a separate 'cat' command. TODO: this
	will fail under windows because of os.sep issues. It might have
	worked before if 'cat' was doing cygwin path conversion.

	* buildbot/slave/commands.py (LogFileWatcher.__init__): note the
	creation of LogFileWatchers
	(ShellCommand._startCommand): and record the files that were
	watched in the 'headers' section of the ShellCommand output

	* buildbot/process/step.py (RemoteShellCommand.__init__): duh, you
	need to actually pass it to the slave if you want it to work.
	(ShellCommand): document it a bit

	* buildbot/test/test_shell.py: new test to validate LogFiles
	* buildbot/test/runutils.py (SlaveCommandTestBase): updates to
	test LogFiles
	* buildbot/test/emitlogs.py: enhance to wait for a line on stdin
	before printing the last batch of lines, to test that the polling
	logic is working properly

	* buildbot/process/step.py (LoggedRemoteCommand): improve LogFile
	handling, making it possible to track multiple logs for a single
	RemoteCommand. The previous single logfile is now known as the
	'stdio' log.
	(LoggedRemoteCommand.remoteUpdate): accept key='log' updates